# python-multipart

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  404.html  CHANGELOG.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  SECURITY.md  _python_multipart.pth  _python_multipart_loader.py  docs_requirements.txt  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml  tasks.py  tox.ini
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: benchmark.yml  cifuzz.yml  docs.yaml  docs.yml  main.yaml  main.yml  publish.yaml  publish.yml  test.yaml  zizmor.yml
api/: index.html
changelog/: index.html
docs/: CNAME  Makefile  api.md  decoders.md  exceptions.md  helper-functions.md  index.md  license.md  main-class.md  make.bat  parsers.md  support-classes.md
docs/source/: api.rst  conf.py  contents.rst.inc  index.rst  quickstart.rst
docs/source/_themes/flask/: layout.html
fuzz/: fuzz_decoders.py  fuzz_form.py  fuzz_multipart_parser.py  fuzz_options_header.py  fuzz_querystring.py  helpers.py
fuzz/corpus/fuzz_multipart_parser/: 0  1
fuzz/corpus/fuzz_querystring/: 0  1
multipart/: __init__.py  _version.py  decoders.py  exceptions.py  multipart.py
multipart/tests/: compat.py  test_multipart.py
multipart/tests/test_data/http/: only_boundary.http  only_boundary.yaml  single_file_blocks.http
python-multipart-master/: CHANGELOG.md  mkdocs.yml
python-multipart-master/docs/: index.md
python-multipart-master/fuzz/: README.md
python-multipart-master/python_multipart/: multipart.py
python-multipart-master/scripts/: rename
python-multipart-master/tests/: compat.py  test_header_robustness.py
python-multipart-master/tests/test_data/http/: CRLF_in_header.http  empty_message_with_bad_end.yaml  header_with_number.http  mixed_plain_and_base64_encoding.http  mixed_plain_and_base64_encoding.yaml
python_multipart/: __init__.py  multipart.py
scripts/: README.md  check  lint  test
search/: search_index.json
tests/: compat.py  test_benchmarks.py  test_file.py  test_multipart.py
tests/test_data/http/: almost_match_boundary.yaml  bad_header_char.http  base64_encoding.yaml  case_insensitive_headers.http  case_insensitive_headers.yaml  crlf_dense_part_data.http  crlf_dense_part_data.yaml  empty_message.http  empty_message.yaml  empty_message_with_bad_end.http  header_with_number.yaml  mixed_case_headers.http  mixed_case_headers.yaml  multiple_files.yaml  preamble.http  preamble_mime_headers.http  preamble_mime_headers.yaml  quoted_printable_encoding.yaml  single_field_single_file.yaml  single_field_with_leading_newlines_and_text.http  single_field_with_trailer.http  single_file.yaml  utf8_filename.yaml
